--- a/NXT_Programming/Base.lproj/Main.storyboard
+++ b/NXT_Programming/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="30B-aE-fhw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="30B-aE-fhw">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -51,6 +51,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1482.421875" y="39.84375"/>
+        </scene>
+        <!--Code Scroll Controller-->
+        <scene sceneID="Z3u-g3-X0y">
+            <objects>
+                <viewController id="lh0-PB-afG" customClass="CodeScrollController" customModule="NXT_Programming" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tob-0a-xVA"/>
+                        <viewControllerLayoutGuide type="bottom" id="KnI-0w-nZh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9BK-vA-uZA">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B0r-yp-AFN">
+                                <rect key="frame" x="0.0" y="185" width="1024" height="185"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KnI-0w-nZh" firstAttribute="top" secondItem="B0r-yp-AFN" secondAttribute="bottom" constant="398" id="BOc-3G-07K"/>
+                            <constraint firstItem="B0r-yp-AFN" firstAttribute="top" secondItem="tob-0a-xVA" secondAttribute="bottom" constant="165" id="IVZ-GP-pBZ"/>
+                            <constraint firstItem="B0r-yp-AFN" firstAttribute="centerX" secondItem="9BK-vA-uZA" secondAttribute="centerX" id="JAo-dM-Vj0"/>
+                            <constraint firstItem="B0r-yp-AFN" firstAttribute="leading" secondItem="9BK-vA-uZA" secondAttribute="leading" id="RQn-Yf-f9N"/>
+                            <constraint firstAttribute="trailing" secondItem="B0r-yp-AFN" secondAttribute="trailing" id="S0L-Rc-wYT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="B0r-yp-AFN" id="rKn-fg-9of"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bez-ii-Ysq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1719.140625" y="876.5625"/>
         </scene>
         <!--NXT Bricks-->
         <scene sceneID="TiH-y3-loS">
@@ -275,7 +308,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="x6j-M2-LVt" customClass="NavigationController" customModule="NXT_Programming" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4i6-Or-fDD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -286,6 +319,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dTG-jd-w3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="758.203125" y="39.84375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eLB-WN-alS">
+            <objects>
+                <viewController id="3Bc-F2-HSi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6fO-2F-dGE"/>
+                        <viewControllerLayoutGuide type="bottom" id="e0k-8y-U3P"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pQ5-qM-vfh">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gst-Ex-rgi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
