--- a/NXT_Programming/Base.lproj/Main.storyboard
+++ b/NXT_Programming/Base.lproj/Main.storyboard
@@ -199,7 +199,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" directionalLockEnabled="YES" bounces="NO" alwaysBounceHorizontal="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="253-fb-raZ">
                                 <rect key="frame" x="0.0" y="588" width="1024" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.87835104695431476" green="0.87835104695431476" blue="0.87835104695431476" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="20" id="Cng-gq-QDI">
                                     <size key="itemSize" width="181" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -264,6 +264,10 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="3b5-az-vMK">
+                                <rect key="frame" x="20" y="44" width="984" height="536"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -316,6 +320,9 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="179" height="169"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="hw8-uS-pfh"/>
     </inferredMetricsTieBreakers>
