--- a/NXT_Programming/Base.lproj/Main.storyboard
+++ b/NXT_Programming/Base.lproj/Main.storyboard
@@ -290,7 +290,7 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="3b5-az-vMK">
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="3b5-az-vMK">
                                 <rect key="frame" x="20" y="44" width="984" height="536"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -347,7 +347,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="179" height="169"/>
+        <image name="background" width="385" height="225"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="hw8-uS-pfh"/>
